--- a/capstoneProject/src/main/resources/templates/editUsername.html
+++ b/capstoneProject/src/main/resources/templates/editUsername.html
@@ -17,7 +17,7 @@
     <a data-th-href="|/app/timeline|" data-th-text="#{toTimelineFromPost}">Back to the Timeline</a>
     <br />
     <form data-th-action="|/app/editUsername/${@sessionManager.loggedInUser.id}|" method="POST" 
-    	data-th-object="${username}">
+    	data-th-object="${username}" >
     	<input class="form-control" type="text" id="username" data-th-field="*{username}" data-th-errorclass="is-invalid" />
     		<div class="invalid-feedback" data-th-errors="*{username}">error</div>
     		<!-- Button trigger modal -->
@@ -53,5 +53,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  	<script>$("form").keypress(e => e.which != 13)</script>
   </body>
 </html>
