--- a/capstoneProject/src/main/resources/templates/profile.html
+++ b/capstoneProject/src/main/resources/templates/profile.html
@@ -289,7 +289,9 @@
 				<span class="alert alert-secondary"
 				data-th-text="|#{postCommentProfile} ${postComment.author.username},
 						 #{postCommentTimeProfile} ${postComment.commentDate}|"></span>
-			</span> <span class="alert alert-secondary"
+			</span> 
+			<br /><br />
+			<span class="alert alert-secondary"
 				data-th-text="|#{parentofPostComment} ${postComment.post.name}: ${postComment.post.content}|"></span>
 			<div data-th-if="${profile.id == @sessionManager.loggedInUser.id}">
 				<div data-th-if="${postComment.deletableByAuthor}">
