seeming final version

--- a/capstoneProject/src/main/resources/templates/editPost.html
+++ b/capstoneProject/src/main/resources/templates/editPost.html
@@ -37,7 +37,7 @@
 			<label align="center" for="content of post"
 				class="alert alert-warning" data-th-text="#{postContent}">The
 				Post Itself</label>
-			<textarea class="form-control" data-th-placeholder="#{editPostContentPlaceholder}"
+			<textarea class="form-control" id="text" data-th-placeholder="#{editPostContentPlaceholder}"
 				rows="6" cols="150" data-th-errorclass="is-invalid"
 				data-th-field="*{content}">
 			</textarea>
