--- a/capstoneProject/src/main/resources/templates/login.html
+++ b/capstoneProject/src/main/resources/templates/login.html
@@ -34,8 +34,8 @@ center
 <body>
 	
 		
-		<div data-th-each="language : ${T(acc.capstone.Language).values()}"
-		data-th-text="${#messages.msg('x' + language)}"></div>
+	<!-- 	<div data-th-each="language : ${T(acc.capstone.Language).values()}"
+		data-th-text="${#messages.msg('x' + language)}"></div>-->
 		
 	<h1 align="center" data-th-text="#{topLineLogin}">Login for
 		ChirGloss</h1>
